added databricks exports

--- a/databricks/Query_Batch_Data.ipynb
+++ b/databricks/Query_Batch_Data.ipynb
@@ -2,392 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "## Setup"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Mount Bucket"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "339e0883-1a76-4547-899b-5d7a3753b61d",
-     "showTitle": true,
-     "title": "Mount Bucket"
-    },
-    "jupyter": {
-     "outputs_hidden": true
+     "nuid": "634d42e4-d38c-4398-9849-467397d1ae07",
+     "showTitle": false,
+     "title": ""
     }
    },
-   "outputs": [],
-   "source": [
-    "from pyspark.sql.functions import *\n",
-    "import urllib\n",
-    "\n",
-    "\n",
-    "file_type = \"csv\"\n",
-    "first_row_is_header = \"true\"\n",
-    "delimiter = \",\"\n",
-    "aws_keys_df = spark.read.format(file_type)\\\n",
-    ".option(\"header\", first_row_is_header)\\\n",
-    ".option(\"sep\", delimiter)\\\n",
-    ".load(\"/FileStore/tables/authentication_credentials.csv\")\n",
-    "\n",
-    "ACCESS_KEY = aws_keys_df.where(col('User name')=='databricks-user').select('Access key ID').collect()[0]['Access key ID']\n",
-    "SECRET_KEY = aws_keys_df.where(col('User name')=='databricks-user').select('Secret access key').collect()[0]['Secret access key']\n",
-    "ENCODED_SECRET_KEY = urllib.parse.quote(string=SECRET_KEY, safe=\"\")\n",
-    "\n",
-    "AWS_S3_BUCKET = \"user-0ea903d23769-bucket\"\n",
-    "MOUNT_NAME = \"/mnt/0ea903d23769-bucket\"\n",
-    "SOURCE_URL = \"s3n://{0}:{1}@{2}\".format(ACCESS_KEY, ENCODED_SECRET_KEY, AWS_S3_BUCKET)\n",
-    "dbutils.fs.mount(SOURCE_URL, MOUNT_NAME)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Read Topic Contents Into Dataframes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "e1e936b7-4aee-440e-8f88-2941359294ab",
-     "showTitle": true,
-     "title": "Read Topic Contents Into Dataframes"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style scoped>\n",
-       "  .ansiout {\n",
-       "    display: block;\n",
-       "    unicode-bidi: embed;\n",
-       "    white-space: pre-wrap;\n",
-       "    word-wrap: break-word;\n",
-       "    word-break: break-all;\n",
-       "    font-family: \"Menlo\", \"Monaco\", \"Consolas\", \"Ubuntu Mono\", \"Source Code Pro\", monospace;\n",
-       "    font-size: 13px;\n",
-       "    color: #555;\n",
-       "    margin-left: 4px;\n",
-       "    line-height: 19px;\n",
-       "  }\n",
-       "</style>\n",
-       "<div class=\"ansiout\"></div>"
-      ]
-     },
-     "metadata": {
-      "application/vnd.databricks.v1+output": {
-       "addedWidgets": {},
-       "arguments": {},
-       "data": "<div class=\"ansiout\"></div>",
-       "datasetInfos": [],
-       "metadata": {},
-       "removedWidgets": [],
-       "type": "html"
-      }
-     },
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "def read_data(spark, file_type, infer_schema, location):\n",
-    "    return spark.read.format(file_type) \\\n",
-    "                    .option(\"inferSchema\", infer_schema) \\\n",
-    "                    .load(location)\n",
-    "\n",
-    "file_type = \"json\"\n",
-    "infer_schema = \"true\"\n",
-    "\n",
-    "location_pin = \"/mnt/0ea903d23769-bucket/topics/0ea903d23769.pin/partition=0/*.json\"\n",
-    "location_geo = \"/mnt/0ea903d23769-bucket/topics/0ea903d23769.geo/partition=0/*.json\"\n",
-    "location_user = \"/mnt/0ea903d23769-bucket/topics/0ea903d23769.user/partition=0/*.json\"\n",
-    "\n",
-    "df_pin_dirty = read_data(spark, file_type, infer_schema, location_pin)\n",
-    "df_geo_dirty = read_data(spark, file_type, infer_schema, location_geo)\n",
-    "df_user_dirty = read_data(spark, file_type, infer_schema, location_user)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Download Dirty CSVs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "9e69de66-a78d-4f5c-8b97-5e1ca6aa77c8",
-     "showTitle": true,
-     "title": "Download Dirty CSVs"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# df_pin.write.csv('FileStore/tables/pin_dirty.csv')\n",
-    "# df_geo.write.csv('FileStore/tables/geo_dirty.csv')\n",
-    "# df_user.write.csv('FileStore/tables/user_dirty.csv')\n",
-    "\n",
-    "display(df_pin_dirty.select(\"*\"))\n",
-    "display(df_geo_dirty.select(\"*\"))\n",
-    "display(df_use_dirty.select(\"*\"))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Create Spark Session"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "8e5ebb5c-fca2-4e14-9586-fd21689cc305",
-     "showTitle": true,
-     "title": "Create Spark Session"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style scoped>\n",
-       "  .ansiout {\n",
-       "    display: block;\n",
-       "    unicode-bidi: embed;\n",
-       "    white-space: pre-wrap;\n",
-       "    word-wrap: break-word;\n",
-       "    word-break: break-all;\n",
-       "    font-family: \"Menlo\", \"Monaco\", \"Consolas\", \"Ubuntu Mono\", \"Source Code Pro\", monospace;\n",
-       "    font-size: 13px;\n",
-       "    color: #555;\n",
-       "    margin-left: 4px;\n",
-       "    line-height: 19px;\n",
-       "  }\n",
-       "</style>\n",
-       "<div class=\"ansiout\"></div>"
-      ]
-     },
-     "metadata": {
-      "application/vnd.databricks.v1+output": {
-       "addedWidgets": {},
-       "arguments": {},
-       "data": "<div class=\"ansiout\"></div>",
-       "datasetInfos": [],
-       "metadata": {},
-       "removedWidgets": [],
-       "type": "html"
-      }
-     },
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "from pyspark.sql import SparkSession\n",
-    "from pyspark.sql.functions import *\n",
-    "from pyspark.sql.window import Window\n",
-    "from pyspark.sql.types import IntegerType, TimestampType, DateType\n",
-    "\n",
-    "spark = SparkSession.builder.appName(\"DF Cleaning\").getOrCreate()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "## Cleaning"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Cleaning df_pin"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "518f3b54-750d-49d4-982c-0d588b6732bb",
-     "showTitle": true,
-     "title": "Cleaning df_pin"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "df_pin = df_pin_dirty\n",
-    "\n",
-    "# Replace empty entries and entries with no relevant data in each column with Nones\n",
-    "df_pin = df_pin.replace(['', ' ', 'NULL', 'null'], [None] * 4)\n",
-    "df_pin = df_pin.withColumn(\"description\", when(col(\"description\") == \"No description available Story format\", None).otherwise(col(\"description\")))\n",
-    "df_pin = df_pin.withColumn(\"follower_count\", when(col(\"follower_count\") == \"User Info Error\", None).otherwise(col(\"follower_count\")))\n",
-    "df_pin = df_pin.withColumn(\"image_src\", when(col(\"image_src\") == \"Image src error.\", None).otherwise(col(\"image_src\")))\n",
-    "df_pin = df_pin.withColumn(\"poster_name\", when(col(\"poster_name\") == \"User Info Error\", None).otherwise(col(\"poster_name\")))\n",
-    "df_pin = df_pin.withColumn(\"tag_list\", when(col(\"tag_list\") == \"N,o, ,T,a,g,s, ,A,v,a,i,l,a,b,l,e\", None).otherwise(col(\"tag_list\")))\n",
-    "df_pin = df_pin.withColumn(\"title\", when(col(\"title\") == \"No Title Data Available\", None).otherwise(col(\"title\")))\n",
-    "\n",
-    "# Transform follower_count to ensure every entry is a number and data type is an int\n",
-    "# Remove any non-numeric characters (like 'k' in '136k') and then convert to integer\n",
-    "df_pin = df_pin.withColumn(\"follower_count\", regexp_replace(col(\"follower_count\"), \"[^0-9]\", \"\"))\n",
-    "df_pin = df_pin.withColumn(\"follower_count\", col(\"follower_count\").cast(IntegerType()))\n",
-    "\n",
-    "# Ensure that each column containing numeric data has a numeric data type\n",
-    "df_pin = df_pin.withColumn(\"downloaded\", col(\"downloaded\").cast(IntegerType()))\n",
-    "\n",
-    "# Clean the data in the save_location column to include only the save location path\n",
-    "df_pin = df_pin.withColumn(\"save_location\", regexp_replace(col(\"save_location\"), \"Local save in \", \"\"))\n",
-    "\n",
-    "# Rename the index column to ind\n",
-    "df_pin = df_pin.withColumnRenamed(\"index\", \"ind\")\n",
-    "\n",
-    "# Reorder the DataFrame columns\n",
-    "df_pin = df_pin.select([\"ind\", \"unique_id\", \"title\", \"description\", \"follower_count\", \"poster_name\", \"tag_list\", \"is_image_or_video\", \"image_src\", \"save_location\", \"category\"])\n",
-    "\n",
-    "\n",
-    "display(df_pin.select(\"*\"))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Cleaning df_geo"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "10bee420-1e1d-4e8d-b2a8-6bfc9df10b7d",
-     "showTitle": true,
-     "title": "Cleaning df_geo"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "df_geo = df_geo_dirty\n",
-    "\n",
-    "# Create a new column 'coordinates' containing an array of latitude and longitude\n",
-    "df_geo = df_geo.withColumn(\"coordinates\", array(col(\"latitude\"), col(\"longitude\")))\n",
-    "\n",
-    "# Drop the latitude and longitude columns\n",
-    "df_geo = df_geo.drop(\"latitude\", \"longitude\")\n",
-    "\n",
-    "# Convert the timestamp column from a string to a timestamp data type\n",
-    "df_geo = df_geo.withColumn(\"timestamp\", col(\"timestamp\").cast(TimestampType()))\n",
-    "\n",
-    "# Reorder the DataFrame columns\n",
-    "df_geo = df_geo.select([\"ind\", \"country\", \"coordinates\", \"timestamp\"])\n",
-    "\n",
-    "display(df_geo.select(\"*\"))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Cleaning df_user"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "8af842a0-f7f1-4d42-bc49-f62cbc95c4ee",
-     "showTitle": true,
-     "title": "Cleaning df_user"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "df_user = df_user_dirty\n",
-    "\n",
-    "# Create a new column 'user_name' by concatenating 'first_name' and 'last_name'\n",
-    "df_user = df_user.withColumn(\"user_name\", concat_ws(\" \", col(\"first_name\"), col(\"last_name\")))\n",
-    "\n",
-    "# Drop the 'first_name' and 'last_name' columns\n",
-    "df_user = df_user.drop(\"first_name\", \"last_name\")\n",
-    "\n",
-    "# Convert the 'date_joined' column from a string to a timestamp data type\n",
-    "df_user = df_user.withColumn(\"date_joined\", col(\"date_joined\").cast(TimestampType()))\n",
-    "\n",
-    "# Reorder the DataFrame columns\n",
-    "df_user = df_user.select([\"ind\", \"user_name\", \"age\", \"date_joined\"])\n",
-    "\n",
-    "display(df_user.select(\"*\"))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "## Tests"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Find Most Popular Category per Country"
    ]
@@ -403,8 +26,8 @@
      },
      "inputWidgets": {},
      "nuid": "66217540-8c22-42e0-b82e-389cfbdf8023",
-     "showTitle": true,
-     "title": "Find Most Popular Category per Country"
+     "showTitle": false,
+     "title": ""
     }
    },
    "outputs": [],
@@ -430,7 +53,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "39fa902e-7427-4bf3-9438-ce3f2052bc2f",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "### Find Post Count per Category Between 2018 & 2022"
    ]
@@ -446,7 +77,7 @@
      },
      "inputWidgets": {},
      "nuid": "abc27421-9c7a-4073-9c60-53c2e5302aa3",
-     "showTitle": true,
+     "showTitle": false,
      "title": "Find Post Count per Category Between 2018 & 2022"
     }
    },
@@ -474,7 +105,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "7f9c6b04-7bf0-423a-9a68-3331a46f6019",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "### Find Most Followed User per Country"
    ]
@@ -490,7 +129,7 @@
      },
      "inputWidgets": {},
      "nuid": "c87a25a1-1f07-4347-b60e-395a0db70d77",
-     "showTitle": true,
+     "showTitle": false,
      "title": "Find Most Followed User per Country"
     }
    },
@@ -513,7 +152,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "f452f3d9-dc5b-4633-9848-2832148cb8e6",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "### Find The Country With Most Followed User"
    ]
@@ -529,7 +176,7 @@
      },
      "inputWidgets": {},
      "nuid": "6960b7fa-a285-4a4e-98b3-541027570706",
-     "showTitle": true,
+     "showTitle": false,
      "title": "Find The Country With Most Followed User"
     }
    },
@@ -548,7 +195,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "a934b61c-582d-4ff2-bc46-de1de98f04ef",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "### Find Most Popular Category per Age Group"
    ]
@@ -564,7 +219,7 @@
      },
      "inputWidgets": {},
      "nuid": "5cf3e54d-f866-435f-b404-e2a95866decc",
-     "showTitle": true,
+     "showTitle": false,
      "title": "Find Most Popular Category per Age Group"
     }
    },
@@ -598,7 +253,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "d0e28e1e-69bd-4f63-86e3-a1ad74facfaf",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "### Find Median Follower Count per Age Group"
    ]
@@ -614,7 +277,7 @@
      },
      "inputWidgets": {},
      "nuid": "857458b8-bede-48fe-b03f-0bc660d19f9d",
-     "showTitle": true,
+     "showTitle": false,
      "title": "Find Median Follower Count per Age Group"
     }
    },
@@ -641,7 +304,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "8aafbe4e-ace0-4e1f-b3d7-9a6888097fd8",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "### Find New User Count Between 2015 & 2020"
    ]
@@ -657,7 +328,7 @@
      },
      "inputWidgets": {},
      "nuid": "ea4c292b-f3f9-490b-ae7d-49eefc4fcf9e",
-     "showTitle": true,
+     "showTitle": false,
      "title": "Find New User Count Between 2015 & 2020"
     }
    },
@@ -680,7 +351,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "11be983d-70b8-408e-b7dd-b3fad445fb72",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "### Find Median Follower Count of Users Joined Between 2015 & 2020"
    ]
@@ -688,7 +367,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "943e1645-9aac-4bb1-afc7-37f4e92edea2",
+     "showTitle": false,
+     "title": "Find Median Follower Count of Users Joined Between 2015 & 2020"
+    }
+   },
    "outputs": [],
    "source": [
     "# Filter users who joined between 2015 and 2020\n",
@@ -707,7 +397,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "5a33e510-d9b5-4e11-9e01-5f21a3aef59a",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "### Find Median Follower Count per Joining Year & Age Group"
    ]
@@ -723,7 +421,7 @@
      },
      "inputWidgets": {},
      "nuid": "a3d7e287-460d-4cbd-9995-61f5da40b0ec",
-     "showTitle": true,
+     "showTitle": false,
      "title": "Find Median Follower Count per Joining Year & Age Group"
     }
    },
@@ -761,7 +459,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "0ea903d23769",
+   "notebookName": "Query_Batch_Data",
    "widgets": {}
   },
   "language_info": {
